--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
 					<li><a href="#">Nav Link 6</a></li>
 					<li><a href="#">Nav Link 7</a></li>
 					<li><button id="navbutton" onclick="paragraph()">Pls Click Me</button></li>
+					<li><button id="changepage"><a href="404.html">CLEAR</a></button></li>
+
 					<!-- Button for Task 3 should be placed here -->
 					
 				</ul>
@@ -38,7 +40,8 @@
 
 					<!-- Paragraphs -->
 					<h3>Basic Directions</h3>
-					<p>This project is meant to assess your understanding of Javascript usage within a webpage.  There are five tasks that you must complete.  The tasks are functionality that will be added to this page.  Inside of the folder you found this html file, you will see a folder called "assets".  Within that, another folder called "javascript" has 5 files labeled task1.js to task5.js.  For each task, place your javascript code within the appropriate file.  The files are already linked to this page in the <b>head</b> of this document.  The instructions for each task are listed below.</p>
+					<p onclick="paragraph()" id="paragraph">This project is meant to assess your understanding of Javascript usage within a webpage.  There are five tasks that you must complete.  The tasks are functionality that will be added to this page.  Inside of the folder you found this html file, you will see a folder called "assets".  Within that, another folder called "javascript" has 5 files labeled task1.js to task5.js.  For each task, place your javascript code within the appropriate file.  The files are already linked to this page in the <b>head</b> of this document.  The instructions for each task are listed below.</p>
+					<p onclick="paragraph()" id="changep" style="display: none">I Clicked It!</p>
 					<hr>
 
 					<h3>Tasks</h3>
