--- a/index.html
+++ b/index.html
@@ -67,14 +67,20 @@
 					<img onmouseover ="buttonappear()" src="assets/img/compIcon.png" id="imageTask1"><br />
 					<button style="display:none" id="buttonTask1" onclick="imgdissappear()">Click Me</button>
 					<hr>
-										
+
+
+
 					<h3>Task 2 - The Table</h3>
 					<!-- Buttons for this task should be entered before the table tag. -->
 					<button id="red" onclick="redbutton()">Click For RED</button>
 					<button id="blue" onclick="bluebutton()">Click For BLUE</button>
 					<button id="green" onclick="greenbutton()">Click For GREEN</button>
+					<button id="normal" onclick="normalbutton()">Click For NO COLOR</button>
+
 
 					
+
+
 					<table class="table table-striped" id="coloredtable">
 						<thead>
 							<tr>
